# inventree-mcp-plugin

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md  install-mcp-plugin.sh  pyproject.toml
install/: inventree-install.sh
inventree_mcp_plugin/: __init__.py  context.py  mcp_server.py  permissions.py  plugin.py  views.py
inventree_mcp_plugin/tools/: __init__.py  categories.py  icons.py  locations.py  parameters.py  parts.py  serializers.py  stock.py
